[Blog][CSS层叠规则/JavaScript][修改错误内容]

--- a/JavaScript/值的比较.md
+++ b/JavaScript/值的比较.md
@@ -142,19 +142,20 @@ null >= 0 // true
 
 来几道题练练手
 
-// 题目1：判断以下比较的结果
-[] == ![]
-[] == []
-[1,2] == "1,2"
-[1,2] > [1,3]
-[1,2] > null
+题目1：判断以下比较的结果
+- [] == ![]
+- [] == []
+- [1,2] == "1,2"
+- [1,2] > [1,3]
+- [1,2] > null
 
-// 题目2：判断以下比较的结果
-2 > true > false
-2 > true > 1
-undefined > 0 > null
+题目2：判断以下比较的结果
+- 2 > true > false
+- 2 > true > 1
+- undefined > 0 > null
 
-// 题目3：判断以下比较的结果
+题目3：判断以下比较的结果
+```
 const obj1 = {
     [Symbol.toPrimitive](hint) {
         return hint === 'number' ? 1 : '2';
@@ -167,18 +168,19 @@ const obj2 = {
 obj1 > obj2
 obj1 == obj2
 +obj1 > obj2
+```
 
-// 题目4：判断以下比较的结果
-Number.MIN_VALUE > 0
-Number.MIN_VALUE < 0
--Number.MIN_VALUE > 0
--Number.MIN_VALUE < 0
+题目4：判断以下比较的结果
+- Number.MIN_VALUE > 0
+- Number.MIN_VALUE < 0
+- -Number.MIN_VALUE > 0
+- -Number.MIN_VALUE < 0
 
-// 题目5：判断以下比较的结果
-'0xff' > 255
-'0xff' > '255'
-255n > '254'
-'255' > 254n
+题目5：判断以下比较的结果
+- '0xff' > 255
+- '0xff' > '255'
+- 255n > '254'
+- '255' > 254n
 
 
 
